--- a/src/main/webapp/resources/style.css
+++ b/src/main/webapp/resources/style.css
@@ -1,5 +1,16 @@
 body {
+	background: #ff9933 url(images/spitter_background.gif) no-repeat
+		fixed left top;
+	color: #333333;
 	font-family: sans-serif;
+	font-size: 0.75em;
+	font-size-adjust: none;
+	font-stretch: normal;
+	font-style: normal;
+	font-variant: normal;
+	font-weight: normal;
+	line-height: 1.5;
+	text-align: center;
 }
 
 .spittleList h1 {
@@ -30,4 +41,21 @@ body {
 
 .spittleForm h1 {
 	font-size: 16pt;
+}
+
+span.error {
+	color: red;
+}
+
+label.error {
+	color: red;
+}
+
+input.error {
+	background-color: #ffcccc;
+}
+
+div.errors {
+	background-color: #ffcccc;
+	border: 2px solid red;
 }
