--- a/src/main/webapp/WEB-INF/templates/registerForm.html
+++ b/src/main/webapp/WEB-INF/templates/registerForm.html
@@ -5,7 +5,7 @@
 	<title>Spittr</title>
 </head>
 <body>
-	<form method="POST" th:object="${spitter}">
+	<form method="POST" th:object="${spitter}" enctype="multipart/form-data">
         <div class="errors" th:if="${#fields.hasErrors('*')}">
           <ul>
             <li th:each="err : ${#fields.errors('*')}" 
@@ -31,6 +31,10 @@
         <label th:class="${#fields.hasErrors('password')}? 'error'">Password</label>: 
           <input type="password" th:field="*{password}"  
                  th:class="${#fields.hasErrors('password')}? 'error'" /><br/>
+        
+        <label>Profile picture</label>
+        	<input type="file" name="profilePicture" accept="image/jpeg, image/png, imgage/gif" /><br/>
+        	
         <input type="submit" value="Register" />
       </form>
 </body>
